--- a/app/index-async.html
+++ b/app/index-async.html
@@ -27,6 +27,7 @@
     $script([
       '../bower_components/angular/angular.js',
       '../bower_components/angular-route/angular-route.js',
+      '../bower_components/angular-bootstrap/ui-bootstrap.js',
       'js/app.js',
       'js/services.js',
       'js/controllers.js',
