--- a/app/index.html
+++ b/app/index.html
@@ -2,43 +2,56 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
+  <title>Do Far</title>
   <link rel="stylesheet" href="css/app.css"/>
   <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
 </head>
 <body>
-  <nav role="navigation" class="navbar navbar-inverse">
-      <!-- Brand and toggle get grouped for better mobile display -->
+  <nav role="navigation" class="navbar navbar-default">
+    <div class="container">
       <div class="navbar-header">
-          <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-          </button>
-          <a href="" class="navbar-brand">Do Far</a>
+        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a href="" class="navbar-brand">Do Far</a>
       </div>
       <!-- Collection of nav links, forms, and other content for toggling -->
       <div id="navbarCollapse" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-              <li class="active"><a href="#/home">首页</a></li>
-              <li><a href="http://blog.dofa.org">博客</a></li>
-              <li><a href="#/photos">相册</a></li>
-              <li><a href="#/about">关于</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <form role="search" class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" placeholder="Search" class="form-control">
-                </div>
-            </form>          
-              <li class="disabled"><a href="#">Login</a></li>
-          </ul>
+        <ul ng-controller="NavCtrl" class="nav navbar-nav">
+          <li ng-repeat="item in items" ng-class="{active: isActive(item)}"><a href="#{{item.path}}">{{item.title}}</a></li>      
+        </ul>
+        <ul class="nav navbar-nav">
+          <li><a href="http://blog.dofa.org">我的博客</a></li>
+          <form role="search" class="navbar-form navbar-left">
+            <div class="form-group">
+              <input type="text" placeholder="Search" class="form-control">
+            </div>
+          </form> 
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="disabled"><a href="#">登录</a></li>
+        </ul>
       </div>
+    </div>
   </nav>
 
 
   <div ng-view></div>
+
+
+  <div ng-controller="NavCtrl">
+    <footer class="footer">
+      <div class="container">
+        <p class="pull-right" ><a href="#{{top}}" target="_self" ng-click="getTop()">Back to top</a></p>
+        <p>
+          Super-powered by <a href="http://dofa.org">Do Far</a>  ©2014
+        </p>
+      </div>
+    </footer>
+  </div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
