--- a/app/index.html
+++ b/app/index.html
@@ -2,63 +2,82 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Do Far</title>
   <link rel="stylesheet" href="css/app.css"/>
   <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
 </head>
 <body>
-  <nav role="navigation" class="navbar navbar-default">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a href="" class="navbar-brand">Do Far</a>
-      </div>
-      <!-- Collection of nav links, forms, and other content for toggling -->
-      <div id="navbarCollapse" class="collapse navbar-collapse">
-        <ul ng-controller="NavCtrl" class="nav navbar-nav">
-          <li ng-repeat="item in items" ng-class="{active: isActive(item)}"><a href="#{{item.path}}">{{item.title}}</a></li>      
-        </ul>
-        <ul class="nav navbar-nav">
-          <li><a href="http://blog.dofa.org">我的博客</a></li>
-          <form role="search" class="navbar-form navbar-left">
-            <div class="form-group">
-              <input type="text" placeholder="Search" class="form-control">
-            </div>
-          </form> 
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li class="disabled"><a href="#">登录</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
 
-
-  <div ng-view></div>
-
-
-  <div ng-controller="NavCtrl">
-    <footer class="footer">
-      <div class="container">
-        <p class="pull-right" ><a href="#{{top}}" target="_self" ng-click="getTop()">Back to top</a></p>
-        <p>
-          Super-powered by <a href="http://dofa.org">Do Far</a>  ©2014
-        </p>
-      </div>
-    </footer>
+  <div ng-controller="MainPhotoCtrl" class="carousel">
+    <carousel interval="myInterval">
+      <slide ng-repeat="slide in slides" active="slide.active">
+        <img ng-src="{{slide.image}}" style="margin:auto;"  width="1366" height="768">
+        <div class="carousel-caption">
+          <h4>Slide {{$index}}</h4>
+        </div>
+      </slide>
+    </carousel>
   </div>
 
+  <div id="header">
+    <nav role="navigation" class="navbar navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="" class="navbar-brand">Do Far</a>
+        </div>
+        <!-- Collection of nav links, forms, and other content for toggling -->
+        <div id="navbarCollapse" class="collapse navbar-collapse">
+          <ul ng-controller="MainCtrl" class="nav navbar-nav">
+            <li ng-repeat="item in items" ng-class="{active: isActive(item)}"><a href="#{{item.path}}">{{item.title}}</a></li>      
+          </ul>
+          <ul class="nav navbar-nav">
+            <li><a href="http://blog.dofa.org">我的博客</a></li>
+            <form role="search" class="navbar-form navbar-left">
+              <div class="form-group">
+                <input type="text" placeholder="Search" class="form-control">
+              </div>
+            </form> 
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="disabled"><a href="#">登录</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+ 
+  <div class="container">
+    <div ng-view></div>
+
+
+    <div ng-controller="MainCtrl">
+      <footer class="footer">
+        <div class="container">
+          <p class="pull-right" >
+          <button ng-click="BackToTop()">Top</button>
+          <p>
+            Super-powered by <a href="http://dofa.org">Do Far</a>  ©2014
+          </p>
+        </div>
+      </footer>
+    </div>
+
+  </div>
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="../bower_components/angular/angular.js"></script>
   <script src="../bower_components/angular-route/angular-route.js"></script>
   <script src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="../bower_components/angular-scroll/angular-scroll.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
