--- a/app/index.html
+++ b/app/index.html
@@ -5,27 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Do Far</title>
-  <link rel="stylesheet" href="css/app.css"/>
   <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
+  <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
 
-  <div ng-controller="MainPhotoCtrl" class="carousel">
-    <carousel interval="myInterval">
-      <slide ng-repeat="slide in slides" active="slide.active">
-        <img ng-src="{{slide.image}}" style="margin:auto;"  width="1366" height="768">
-        <div class="carousel-caption">
-          <h4>Slide {{$index}}</h4>
-        </div>
-      </slide>
-    </carousel>
-  </div>
-
   <div id="header">
-    <nav role="navigation" class="navbar navbar-fixed-top">
+    <nav role="navigation" class="navbar transparent" id="navbar">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+          <button type="button" class="navbar-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -34,26 +23,18 @@
           <a href="" class="navbar-brand">Do Far</a>
         </div>
         <!-- Collection of nav links, forms, and other content for toggling -->
-        <div id="navbarCollapse" class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse" ng-class="{'in':!navCollapsed}">
           <ul ng-controller="MainCtrl" class="nav navbar-nav">
             <li ng-repeat="item in items" ng-class="{active: isActive(item)}"><a href="#{{item.path}}">{{item.title}}</a></li>      
           </ul>
           <ul class="nav navbar-nav">
             <li><a href="http://blog.dofa.org">我的博客</a></li>
-            <form role="search" class="navbar-form navbar-left">
-              <div class="form-group">
-                <input type="text" placeholder="Search" class="form-control">
-              </div>
-            </form> 
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="disabled"><a href="#">登录</a></li>
           </ul>
         </div>
       </div>
     </nav>
   </div>
- 
+
   <div class="container">
     <div ng-view></div>
 
@@ -71,6 +52,7 @@
     </div>
 
   </div>
+
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
