--- a/app/index.html
+++ b/app/index.html
@@ -20,37 +20,36 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="" class="navbar-brand">Do Far</a>
+          <a href="" class="navbar-brand">潮汐猎人</a>
         </div>
         <!-- Collection of nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" ng-class="{'in':!navCollapsed}">
-          <ul ng-controller="MainCtrl" class="nav navbar-nav">
-            <li ng-repeat="item in items" ng-class="{active: isActive(item)}"><a href="#{{item.path}}">{{item.title}}</a></li>      
-          </ul>
-          <ul class="nav navbar-nav">
-            <li><a href="http://blog.dofa.org">我的博客</a></li>
+          <ul ng-controller="MainCtrl" class="nav navbar-nav navbar-right">
+            <li ng-repeat="item in items" ng-class="{active: isActive(item)}"><a href="#{{item.path}}">{{item.title}}</a></li> 
+            <li><a href="http://blog.dofa.org">我的博客</a></li>     
           </ul>
         </div>
       </div>
     </nav>
   </div>
 
+  <div class="placeholder"></div>
+
   <div class="container">
     <div ng-view></div>
 
+  </div>
 
-    <div ng-controller="MainCtrl">
-      <footer class="footer">
-        <div class="container">
-          <p class="pull-right" >
-          <button ng-click="BackToTop()">Top</button>
-          <p>
-            Super-powered by <a href="http://dofa.org">Do Far</a>  ©2014
-          </p>
-        </div>
-      </footer>
-    </div>
-
+  <div ng-controller="MainCtrl">
+    <footer class="footer">
+      <div class="container">
+        <p class="pull-right" >
+        <button ng-click="BackToTop()">Top</button>
+        <p>
+          Super-powered by <a href="http://dofa.org">Do Far</a>  ©2014
+        </p>
+      </div>
+    </footer>
   </div>
 
   <!-- In production use:
